--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>HOLA esta es la primera pagina que creo con github y estoy muy feliz por ello</h1>
 
-    
+    <h2>ESPERO QUE LO ENTIENDA TODO.</h2>
 </body>
 </html>
