agrege un input
agrege un boton

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>HOLA esta es la primera pagina que creo con github y estoy muy feliz por ello</h1>
 
     <h2>ESPERO QUE LO ENTIENDA TODO.</h2>
+
+    <input type="submit" value="Enviar">
 </body>
 </html>
